[package]
authors = ["cyqsimon"]
description = "fp (FilterPath) is the filter equivalent for the Unix test util."
edition = "2021"
name = "fp"
version = "0.1.0"

[dependencies]
camino = "1.1.2"
clap = {version = "4.1.4", features = ["cargo", "derive", "unicode"]}
displaydoc = "0.2.3"
log = "0.4.17"
simplelog = "0.12.0"
thiserror = "1.0.38"
