[package]
authors = ["cyqsimon"]
description = "fp (FilterPath) is the filter equivalent for the Unix test util."
edition = "2024"
name = "fp"
rust-version = "1.85.0"
version = "0.1.0"

[dependencies]
camino = "1.2.2"
clap = { version = "4.6.0", features = ["cargo", "derive", "unicode"] }
libc = "0.2.184"
pastey = "0.2.1"
thiserror = "2.0.18"

[build-dependencies]
clap = { version = "4.6.0", features = ["cargo", "derive", "unicode"] }
clap_complete = "4.6.0"
